Bug 255328 mkdepend command line defines may be broken patch by jw6057@bacon.qcc.mass.edu r=bryner